# vm_manager

./: .gitignore  .gitmodules  Build.md  CMakeLists.txt  CODEOWNERS  INSTALL  Makefile  README.md  SECURITY.md  allowlist.txt  build_fuzz.sh
.github/workflows/: Issue-template.yaml  Jenkins_ci.yml  ci.yaml  ci.yml  codeql-analysis.yml  issue-closed.yml  issue_closed.yml  pr-approved.yml  pr-raised.yml  publish_pr_events.yml  publish_review_event.yaml  release.yml  release_flow.yaml  reviewdog.yml  store_review_event.yaml
debian/: changelog  control  copyright  install  rules  vm-manager.civ-base.udev  vm-manager.postinst  vm-manager.preinst
debian/etc/modules-load.d/: civ-mods-base.conf
debian/patches/: 157.patch
docs/: DeveloperDoc.md  Documentation.md  fields.md
sample/: civ-1.ini  guest01.ini  guest02.ini
scripts/: LG_B1_Client  LG_B1_Client_clipboard  Security.md  ai_raw_tensor.sh  ffmpeg_script.sh  guest_time_keeping.sh  input-port-associations.xml  lg_example.sh  lg_vinput-manager  setup_ai_dispatcher.sh  setup_cam_sharing.sh  setup_host.sh  setup_lg_client.sh  start_civ.sh  start_flash_usb.sh  stream
skucfg/tasmania/: ssdt.dsl  virtio_gpio.map
src/: CMakeLists.txt  Makefile  utils.c  vm_manager.c  vm_manager.cc
src/android/: Android.bp  startup_notify.cc
src/android/applauncher/: Android.bp  civ_applauncher.cc
src/android/powerctl/: Android.bp  civ_powerctl.cc
src/android/startup_notify/: Android.bp  civ_startup_notify.cc
src/cmake/: BoostCMake.cmake  FTXUICMake.cmake  gRPCExtCMake.cmake  gRPCFetchCMake.cmake  revision.h.in  revisionCMake.cmake
src/guest/: aaf.c  aaf.cc  aaf.h  config_parser.cc  config_parser.h  config_parser_test.cpp  flash.c  guest.c  qmp.c  rpmb.c  start.c  tui.c  tui.cc  tui.h  vm_builder.cc  vm_builder.h  vm_builder_qemu.cc  vm_builder_qemu.h  vm_flash.cc  vm_flash.h  vm_powerctl.h  vm_process.cc  vm_process.h  vsock_cid_pool.cc  vsock_cid_pool.h  vtpm.c
src/host/app_launcher/: CMakeLists.txt  app_launcher_client.cc
src/include/: utils.h  vm_manager.h
src/include/constants/: vm_manager.h
src/include/guest/: aaf.h  guest.h  rpmb.h  vtpm.h
src/services/: client.cc  client.h  message.h  server.cc  server.h  startup_listener_impl.cc  startup_listener_impl.h
src/services/protos/: Android.bp  CMakeLists.txt  common.proto  vm_guest.proto  vm_host.proto
src/services/protos/gens/: common.grpc.pb.cc  common.grpc.pb.h  common.pb.cc  common.pb.h  vm_guest.grpc.pb.cc  vm_guest.grpc.pb.h  vm_guest.pb.cc  vm_guest.pb.h  vm_host.grpc.pb.cc  vm_host.grpc.pb.h  vm_host.pb.cc  vm_host.pb.h
src/utils/: log.h  utils.cc  utils.h
